examples/regressions/230_unit_is_never.an
import Std.Throw.Throw, throw

unit_neverizer {Throw Never} =
    throw ()

main () =
    handler h for throw _ -> println "threw!"
    unit_neverizer h
    println "through!"

// args: --check --no-color
// expected exit status: 1
// expected stderr:
// examples/regressions/230_unit_is_never.an:3:17
//   | // error: This is an effect and cannot be used as an ordinary type
// 3 | unit_neverizer {Throw Never} =
//   |                 ^^^^^^^^^^^
// 4 |     throw ()
// 
// examples/regressions/230_unit_is_never.an:8:20
//  7 |     handler h for throw _ -> println "threw!"
//  8 |     unit_neverizer h	// error: Argument 1 has type <(Throw _)> but Throw Never was expected
//    |                    ^
//  9 |     println "through!"
// 
// Found 2 errors and 0 warnings

